// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{95973DCC0000000000000000}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQC5kHl4wKMEyK7Jx5wgtUw37HEdbAUAx9bCR7RHzcMYe28U",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 10288n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "cell": "x{D37FB8210000000000000000}",
          "type": "cell",
        },
        "bounce": true,
        "from": "kQC5kHl4wKMEyK7Jx5wgtUw37HEdbAUAx9bCR7RHzcMYe28U",
        "to": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
        "type": "internal",
        "value": 9988516000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "message": {
      "body": {
        "cell": "x{D779C4ED00000000000000000000000000000000000000000000000000000000000000007FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFECC2_}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQC5kHl4wKMEyK7Jx5wgtUw37HEdbAUAx9bCR7RHzcMYe28U",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 7322n,
    "type": "processed",
  },
]
`;
